Add spinner demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".EntryActivity.NavigetionDrawerActivity"
             android:label="@string/title_activity_navigetion_drawer"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".SpinnerSample.SpinnerActivity"></activity>
     </application>
 
 </manifest>
